FixedMobileSize&Align

--- a/HotelReservation/Content/Site.css
+++ b/HotelReservation/Content/Site.css
@@ -69,9 +69,20 @@ input[type="select"] {
 {
     width: 100% !important;
     height: 400px !important;
-    margin: auto !important;
+    margin: 0px !important;
 }
 
+.TextBox
+        {
+            height:20%; 
+            width: 80%;
+            border-radius: 6px;
+            border-style: groove;
+            /*padding:0px 0px 0px 5px;*/
+            /*margin:0px 0px 0px 5px;*/
+            float: none;
+
+        }
 
 .columnleft 
 {
@@ -80,7 +91,7 @@ input[type="select"] {
     /*max-width: 65%;*/
     border: solid 1px black;
     margin: 2px 2px 5px 7px;
-    padding: 1px;
+    padding: 10px 0px 1px 10px;
     background-color: white;
     min-height: 700px;
 }
@@ -100,29 +111,46 @@ input[type="select"] {
 
 @media screen and (max-width: 650px) {
 
-
-	.columnleft {
-		position: center;
-        width: 80%;
-        max-height:200px;
-        padding:1px 1px 1px 1px;
-        margin:1px 1px 1px 7px;
-        float: none;
-	}
-	.column  {
-		width: 500px;
-        height:30%;
-		float: none;
-		margin: 0;
-        padding:1px 1px 1px 1px;
-        margin:1px 1px 1px 7px;
-	}
+        /*carousel*/
     .container{
         width: 100% !important;
         position: relative;
         float:none;
-        padding:1px;
-        margin:5px 1px 2px 5px;
+        padding:0px 0px 0px 10px;
+        margin:1px 1px 2px 20px;
+    }
+	.columnleft {
+		position: center;
+        width: 77%;
+        max-height:200px;
+        position: center;
+        padding:1px 1px 1px 10px;
+        margin:1px 1px 1px 29px;
+        float: none;
+	}
+	.column  {
+		width: 480px;
+        height:30%;
+        position: relative;
+		float: none;
+		margin: 0;
+        padding:1px 1px 1px 1px;
+        margin:1px 1px 1px 28px;
+	}
+
+    .TextBox
+        {
+            height:20%; 
+            width: 80%;
+            border-radius: 6px;
+            padding:0px 0px 0px 5px;
+            margin:0px 0px 0px 5px;
+            float: none;
+        }
+    .carousel-control{
+        width:50%;
+        padding:0px;
+        margin:1%;
     }
 
 }
